--- a/style/style.sass
+++ b/style/style.sass
@@ -1,6 +1,6 @@
 @use 'variables'
-  
-* 
+
+*
   margin: 0
   padding: 0
   box-sizing: border-box
@@ -45,7 +45,7 @@ i
   text-transform: uppercase
   margin-right: 2rem
 
-#navbar a 
+#navbar a
   color: variables.$primary-text-color
   font-weight: bold
 
@@ -55,7 +55,7 @@ i
 .banner
   max-width: 50%
   padding: 4rem
-  opacity: 1 
+  opacity: 0
   position: absolute
   transition: 0.6s
 
@@ -77,7 +77,6 @@ i
   z-index: 1
   left: 20px
   top: 30px
-  
 
 .dots
   display: flex
@@ -93,3 +92,145 @@ i
 
 .dot.active
   background-color: variables.$main-color
+
+.text-image-section
+  display: flex
+  flex-wrap: wrap
+  gap: 2rem
+
+.text-container
+  flex: 2 1 0
+  display: flex
+  gap: 2rem
+  flex-direction: column
+  justify-content: center
+  text-align: right
+
+.section-subtitle
+  text-transform: uppercase
+  font-weight: bold
+  color: variables.$main-color
+
+.section-title
+  color: variables.$secondary-text-color
+  font-size: 2rem
+
+.btn
+  padding: 1.2rem 1.8rem
+  text-transform: uppercase
+  font-size: 1.4rem
+  font-weight: bold
+  color: variables.$primary-text-color
+  background-color: variables.$main-color
+  align-self: flex-end
+
+.image-container
+  flex: 1 1 300px
+  position: relative
+
+.image-container i
+  position: absolute
+
+#other-services
+  width: 100%
+  display: flex
+  gap: 2rem
+  padding: 2rem
+
+.service
+  position: relative
+
+.service i
+  position: absolute
+  left: 0
+  top: 0
+  padding: 1rem
+  font-size: 1.5rem
+
+.service-info
+  background-color: variables.$tertiary-color
+  padding: 2rem 1.4rem
+  min-height: 250px
+  margin-top: -3rem
+  z-index: 2
+  position: relative
+
+.service h4
+  font-size: 1.8rem
+  margin-bottom: 1rem
+  text-transform: uppercase
+
+#about
+  display: flex
+  flex-wrap: wrap
+  align-items: center
+  gap: 2rem
+
+  #about-text
+    background-image: url("../img/pattern.png")
+    background-size: cover
+    background-position: center
+    color: variables.$primary-text-color
+    flex: 1 1 0
+    display: flex
+    flex-direction: column
+    justify-content: center
+    gap: 2rem
+    padding: 4rem 3rem
+
+#about-text .section-subtitle,
+#about-text .section-title
+  color: variables.$primary-text-color
+
+#about-text i
+  background-color: transparent
+
+.about-description
+  display: flex
+  align-items: center
+
+
+  & h4
+    font-size: 1.4rem
+    margin-bottom: 1rem
+
+#about-data
+  flex: 1 1 0
+  display: flex
+  flex-wrap: wrap
+  padding: 2rem
+
+
+  & .data
+    width: 50%
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    padding: 2rem
+    margin-top: -1px
+    margin-left: -1px
+
+
+  & .data:first-child
+    border-bottom: 1px solid variables.$secondary-text-color
+    border-right: 1px solid variables.$secondary-text-color
+
+
+  & .data:last-child
+    border-top: 1px solid variables.$secondary-text-color
+    border-left: 1px solid variables.$secondary-text-color
+
+
+  & .data i
+    background-color: transparent
+    color: variables.$main-color
+    font-size: 4rem
+    padding: 0
+
+.data .number
+  font-size: 4rem
+  font-weight: 900
+
+.data .text
+  text-transform: uppercase
