--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -260,4 +261,313 @@ i {
 
 .data .text {
   text-transform: uppercase;
+}
+
+#testimonials {
+  display: flex;
+  align-items: center;
+}
+
+#testimonial-information {
+  padding: 3rem;
+}
+
+.autor {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 1rem;
+}
+
+.author .author-name {
+  color: #d92123;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.author .author-job {
+  color: #191919;
+  margin-bottom: 0.5rem;
+}
+
+.author img {
+  width: 100px;
+  height: 100px;
+}
+
+#team {
+  position: relative;
+  margin-bottom: 2rem;
+}
+#team h2 {
+  font-size: 3rem;
+  text-align: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: relative;
+  z-index: 2;
+}
+#team h2 span {
+  color: #d92123;
+}
+#team .square {
+  background-color: #eff3f4;
+  width: 100px;
+  height: 100px;
+  left: 50%;
+  margin-left: -50px;
+  top: -25px;
+}
+
+.employees {
+  display: flex;
+  gap: 2rem;
+  padding: 2rem;
+  text-align: center;
+}
+
+.employee-name {
+  color: #d92123;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 0.5rem 0;
+}
+
+#contact {
+  background-color: #d92123;
+  gap: 0;
+  padding-bottom: 5rem;
+}
+#contact-information {
+  position: relative;
+  text-align: left;
+  padding: 3rem;
+  flex: 1 1 0;
+}
+#contact-information .section-subtitle {
+  color: #fff;
+}
+#contact-information i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  color: #d92123;
+}
+#contact-information form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+#contact-information .form-control {
+  display: flex;
+  gap: 1rem;
+}
+
+#contact-information input,
+#contact-information textarea {
+  flex: 0.5;
+  padding: 1rem;
+  border: none;
+}
+
+#contact-information .btn {
+  align-self: start;
+  border: 2px solid #fff;
+  font-size: 1.2rem;
+  transition: 0.4s;
+}
+#contact-information .btn:hover {
+  background-color: #fff;
+  color: #d92123;
+}
+
+#footer {
+  color: #fff;
+  background-color: #5c1011;
+  display: flex;
+  justify-content: space-around;
+  padding: 3rem 3rem 5rem;
+}
+#footer i {
+  font-size: 1rem;
+  padding: 0.3rem;
+}
+#footer a {
+  color: #fff;
+}
+
+.contact-info,
+.links-container {
+  width: 20%;
+}
+
+.footer-brand {
+  margin-bottom: 2rem;
+}
+.footer-brand h2 {
+  background-color: #d92123;
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+}
+
+.contact-info p {
+  margin-bottom: 1rem;
+}
+.contact-info p i {
+  background-color: transparent;
+  padding: 0;
+  color: #d92123;
+}
+
+.social-networks p {
+  margin-bottom: 1rem;
+}
+
+.networks {
+  margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
+}
+#footer .networks i {
+  padding: 1rem;
+}
+
+.links-container h4 {
+  text-transform: uppercase;
+  margin-bottom: 3rem;
+}
+
+.links-container nav {
+  display: flex;
+  flex-direction: column;
+}
+.links-container nav a {
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #868686;
+}
+
+.phone-number {
+  display: flex;
+  border: 1px solid #d92123;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.phone-info {
+  color: #868686;
+}
+
+@media (max-width: 450px) {
+  /* Geral */
+  body {
+    overflow-x: hidden;
+  }
+  i {
+    padding: 1.5rem;
+    font-size: 2rem;
+  }
+  /* navbar */
+  #navbar {
+    display: none;
+  }
+  #menu,
+#close-menu {
+    display: block;
+  }
+  .banner {
+    max-width: 100%;
+    padding: 4rem 2rem;
+  }
+  .banner h2 {
+    font-size: 3rem;
+  }
+  .banner p {
+    font-size: 1rem;
+  }
+  /* Áreas de atuação */
+  .btn {
+    align-self: initial;
+  }
+  .image-container {
+    flex: 1 1 100%;
+  }
+  #other-services {
+    flex-wrap: wrap;
+  }
+  /* Sobre nós */
+  #about {
+    gap: 0;
+  }
+  #about-text,
+#about-data {
+    flex: 1 1 100%;
+  }
+  .about-description {
+    gap: 1rem;
+  }
+  .about-description i {
+    padding: 0;
+    min-width: 40px;
+  }
+  #about #about-data .data {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid var(--secondary-text-color);
+  }
+  .text-container {
+    text-align: center;
+    padding: 2rem;
+  }
+  #team {
+    margin-top: 2rem;
+  }
+  #team h2 {
+    font-size: 2.5rem;
+  }
+  .employees {
+    flex-wrap: wrap;
+  }
+  /* Contato */
+  #contact {
+    padding-bottom: 0;
+  }
+  #contact-information {
+    padding: 7rem 1rem;
+  }
+  #contact-information .form-control {
+    flex-direction: column;
+  }
+  #contact-information .btn {
+    align-self: auto;
+  }
+  /* Rodapé */
+  #footer {
+    flex-wrap: wrap;
+  }
+  #footer i {
+    font-size: 2rem;
+    padding: 1rem;
+  }
+  .footer-brand {
+    text-align: center;
+  }
+  .networks {
+    margin-bottom: 3rem;
+  }
+  .links-container {
+    margin-bottom: 1rem;
+  }
+  .links-container h4 {
+    margin-bottom: 1.5rem;
+  }
+  .contact-info,
+.links-container {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
