--- a/style/style.sass
+++ b/style/style.sass
@@ -189,7 +189,6 @@ i
   display: flex
   align-items: center
 
-
   & h4
     font-size: 1.4rem
     margin-bottom: 1rem
@@ -199,7 +198,6 @@ i
   display: flex
   flex-wrap: wrap
   padding: 2rem
-
 
   & .data
     width: 50%
@@ -211,16 +209,13 @@ i
     margin-top: -1px
     margin-left: -1px
 
-
   & .data:first-child
     border-bottom: 1px solid variables.$secondary-text-color
     border-right: 1px solid variables.$secondary-text-color
 
-
   & .data:last-child
     border-top: 1px solid variables.$secondary-text-color
     border-left: 1px solid variables.$secondary-text-color
-
 
   & .data i
     background-color: transparent
@@ -234,3 +229,297 @@ i
 
 .data .text
   text-transform: uppercase
+
+#testimonials
+  display: flex
+  align-items: center
+
+#testimonial-information
+  padding: 3rem
+
+.autor
+  display: flex
+  justify-content: end
+  align-items: center
+  gap: 1rem
+
+.author .author-name
+  color: variables.$main-color
+  text-transform: uppercase
+  font-size: 1.3rem
+  font-weight: bold
+  margin-bottom: 1rem
+
+.author .author-job
+  color: variables.$secondary-text-color
+  margin-bottom: .5rem
+
+.author img
+  width: 100px
+  height: 100px
+
+#team
+  position: relative
+  margin-bottom: 2rem
+
+  & h2
+    font-size: 3rem
+    text-align: center
+    max-width: 1000px
+    margin: 0 auto
+    position: relative
+    z-index: 2
+
+  & h2 span
+    color: variables.$main-color
+
+  & .square
+    background-color: variables.$tertiary-color
+    width: 100px
+    height: 100px
+    left: 50%
+    margin-left: -50px
+    top: -25px
+
+.employees
+  display: flex
+  gap: 2rem
+  padding: 2rem
+  text-align: center
+
+.employee-name
+  color: variables.$main-color
+  text-transform: uppercase
+  font-size: 1.2rem
+  font-weight: bold
+  margin: 0.5rem 0
+
+#contact
+  background-color: variables.$main-color
+  gap: 0
+  padding-bottom: 5rem
+
+  &-information
+    position: relative
+    text-align: left
+    padding: 3rem
+    flex: 1 1 0
+
+  &-information .section-subtitle
+    color: variables.$primary-text-color
+
+  &-information i
+    position: absolute
+    top: 0
+    left: 0
+    background-color: variables.$primary-text-color
+    color: variables.$main-color
+
+  &-information form
+    display: flex
+    flex-direction: column
+    gap: 1rem
+
+  &-information .form-control
+    display: flex
+    gap: 1rem
+
+#contact-information input,
+#contact-information textarea
+  flex: 0.5
+  padding: 1rem
+  border: none
+
+#contact-information .btn
+  align-self: start
+  border: 2px solid variables.$primary-text-color
+  font-size: 1.2rem
+  transition: 0.4s
+
+  &:hover
+    background-color: variables.$primary-text-color
+    color: variables.$main-color
+
+#footer
+  color: variables.$primary-text-color
+  background-color: variables.$secondary-bg-color
+  display: flex
+  justify-content: space-around
+  padding: 3rem 3rem 5rem
+
+  & i
+    font-size: 1rem
+    padding: 0.3rem
+
+  & a
+    color: variables.$primary-text-color
+
+.contact-info,
+.links-container
+  width: 20%
+
+.footer-brand
+  margin-bottom: 2rem
+
+  & h2
+    background-color: variables.$main-color
+    margin-bottom: 0.5rem
+    padding: 1rem
+
+.contact-info p
+  margin-bottom: 1rem
+
+  & i
+    background-color: transparent
+    padding: 0
+    color: variables.$main-color
+
+.social-networks p
+  margin-bottom: 1rem
+
+.networks
+  margin-top: 2rem
+  display: flex
+  gap: 1rem
+
+  #footer & i
+    padding: 1rem
+
+.links-container h4
+  text-transform: uppercase
+  margin-bottom: 3rem
+
+.links-container nav
+  display: flex
+  flex-direction: column
+
+  & a
+    padding-bottom: 1rem
+    margin-bottom: 1rem
+    border-bottom: 1px solid variables.$secondary-color
+
+.phone-number
+  display: flex
+  border: 1px solid variables.$main-color
+  gap: 1rem
+  align-items: center
+  margin-bottom: 1rem
+
+.phone-info
+  color: variables.$secondary-color
+
+@media (max-width: 450px)
+  /* Geral */
+  body
+    overflow-x: hidden
+
+  i
+    padding: 1.5rem
+    font-size: 2rem
+
+  /* navbar */
+  #navbar
+    display: none
+
+  #menu,
+  #close-menu
+    display: block
+
+  .banner
+    max-width: 100%
+    padding: 4rem 2rem
+
+
+  .banner h2
+    font-size: 3rem
+
+
+  .banner p
+    font-size: 1rem
+
+  /* Áreas de atuação */
+  .btn
+    align-self: initial
+
+  .image-container
+    flex: 1 1 100%
+
+  #other-services
+    flex-wrap: wrap
+
+  /* Sobre nós */
+  #about
+    gap: 0
+
+  #about-text,
+  #about-data
+    flex: 1 1 100%
+
+  .about-description
+    gap: 1rem
+
+
+  .about-description i
+    padding: 0
+    min-width: 40px
+
+  #about #about-data .data
+    width: 100%
+    border: none
+    border-bottom: 1px solid var(--secondary-text-color)
+
+  .text-container
+    text-align: center
+    padding: 2rem
+
+  #team
+    margin-top: 2rem
+
+
+  #team h2
+    font-size: 2.5rem
+
+  .employees
+    flex-wrap: wrap
+
+  /* Contato */
+  #contact
+    padding-bottom: 0
+
+
+  #contact-information
+    padding: 7rem 1rem
+
+
+  #contact-information .form-control
+    flex-direction: column
+
+
+  #contact-information .btn
+    align-self: auto
+
+  /* Rodapé */
+  #footer
+    flex-wrap: wrap
+
+
+  #footer i
+    font-size: 2rem
+    padding: 1rem
+
+  .footer-brand
+    text-align: center
+
+  .networks
+    margin-bottom: 3rem
+
+  .links-container
+    margin-bottom: 1rem
+
+
+  .links-container h4
+    margin-bottom: 1.5rem
+
+  .contact-info,
+  .links-container
+    width: 100%
