--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -68,6 +67,7 @@ i {
   opacity: 0;
   position: absolute;
   transition: 0.6s;
+  margin-left: 2rem;
 }
 .banner h2 {
   font-size: 4rem;
@@ -463,8 +463,45 @@ i {
   color: #868686;
 }
 
+#menu,
+#close-menu {
+  font-size: 2rem;
+  padding: 1rem;
+  display: none;
+}
+#menu,
+#close-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#mobile-navbar {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
+  display: flex;
+  flex-direction: column;
+  padding: 4rem 2rem;
+  transition: 0.4s;
+  z-index: 5;
+}
+#mobile-navbar.menu-active {
+  left: 0;
+}
+#mobile-navbar a {
+  color: #fff;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #d92123;
+}
+
 @media (max-width: 450px) {
-  /* Geral */
   body {
     overflow-x: hidden;
   }
@@ -472,7 +509,6 @@ i {
     padding: 1.5rem;
     font-size: 2rem;
   }
-  /* navbar */
   #navbar {
     display: none;
   }
@@ -490,7 +526,6 @@ i {
   .banner p {
     font-size: 1rem;
   }
-  /* Áreas de atuação */
   .btn {
     align-self: initial;
   }
@@ -500,7 +535,6 @@ i {
   #other-services {
     flex-wrap: wrap;
   }
-  /* Sobre nós */
   #about {
     gap: 0;
   }
@@ -533,7 +567,6 @@ i {
   .employees {
     flex-wrap: wrap;
   }
-  /* Contato */
   #contact {
     padding-bottom: 0;
   }
@@ -546,7 +579,6 @@ i {
   #contact-information .btn {
     align-self: auto;
   }
-  /* Rodapé */
   #footer {
     flex-wrap: wrap;
   }
